spring-kafka-openshift-demo-consumer/target/classes/META-INF/fabric8/openshift/spring-kafka-openshift-demo-consumer-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    prometheus.io/scrape: "true"
    fabric8.io/scm-tag: HEAD
    prometheus.io/port: "9779"
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-kafka-openshift-demo-consumer
  labels:
    expose: "true"
    app: spring-kafka-openshift-demo-consumer
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.systemcraftsman.demo
  name: spring-kafka-openshift-demo-consumer
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-kafka-openshift-demo-consumer
    provider: fabric8
    group: com.systemcraftsman.demo
